cmake_minimum_required(VERSION 3.10)
project(Test)

set(${SRC_CPP} "${SRC_CPP} JPrint.cpp")
add_executable(JStr  ${SRC_CPP} JStr.cpp)
add_executable(JInt  ${SRC_CPP} JInt.cpp)
add_executable(JUint ${SRC_CPP} JUint.cpp)
add_executable(JFlt  ${SRC_CPP} JFlt.cpp)
add_executable(JBool ${SRC_CPP} JBool.cpp)
add_executable(JDate ${SRC_CPP} JDate.cpp)
add_executable(JArr  ${SRC_CPP} JArr.cpp)
add_executable(JObj  ${SRC_CPP} JObj.cpp)

add_test(NAME JStr  COMMAND JStr  WORKING_DIRECTORY "${WORK_DIR}")
add_test(NAME JInt  COMMAND JInt  WORKING_DIRECTORY "${WORK_DIR}")
add_test(NAME JUint COMMAND JUint WORKING_DIRECTORY "${WORK_DIR}")
add_test(NAME JFlt  COMMAND JFlt  WORKING_DIRECTORY "${WORK_DIR}")
add_test(NAME JBool COMMAND JBool WORKING_DIRECTORY "${WOKR_DIR}")
add_test(NAME JDate COMMAND JDate WORKING_DIRECTORY "${WORK_DIR}")
add_test(NAME JArr  COMMAND JArr  WORKING_DIRECTORY "${WORK_DIR}")
add_test(NAME JObj  COMMAND JObj  WORKING_DIRECTORY "${WORK_DIR}")